package com.springframework.beans.factory;

/**
 * 标记类接口，实现该接口之后可以被Spring容器感知。
 * 实现类也会感知到自己所属的Spring组件。
 */
public interface Aware {
}
